# innosetup-cmdlinerunner

./: CMakeLists.txt  README.md
.github/workflows/: build-cmdlinerunner.yml
